@@ -43,12 +43,14 @@ Gradle AEM Plugin 6.x serie and upper will **no longer support Groovy DSL** and 
 
 To see documentation for previous 5.x serie, please [click here](https://github.com/Cognifide/gradle-aem-plugin/tree/groovy) (navigate to branch `groovy`).
 
+Also keep in mind, that GAP 6.x is **temporarily supporting only Gradle 5.x** (is not supporting 5.1 or higher) due to API changes related with [lazy configuration](https://docs.gradle.org/5.1.1/userguide/userguide.html).
+
 ## Table of contents
 
   * [Getting started](#getting-started)
   * [Configuration](#configuration)
      * [Plugin setup](#plugin-setup)
-        * [Minimal:](#minimal)
+        * [Minimal](#minimal)
         * [Additional](#additional)
      * [Config plugin](#config-plugin)
         * [Instance conventions](#instance-conventions)
@@ -70,11 +72,12 @@ To see documentation for previous 5.x serie, please [click here](https://github.
         * [Task aemCompose](#task-aemcompose)
            * [Default configuration](#default-configuration)
         * [Including additional OSGi bundle into CRX package](#including-additional-osgi-bundle-into-crx-package)
-           * [Assembling packages (merging into all-in-one)](#assembling-packages-merging-into-all-in-one)
+           * [Assembling packages (merging all-in-one)](#assembling-packages-merging-all-in-one)
            * [Expandable properties](#expandable-properties)
         * [Task aemDeploy](#task-aemdeploy)
            * [Deploying only to author or publish instances](#deploying-only-to-author-or-publish-instances)
            * [Deploying only to instances specified explicitly](#deploying-only-to-instances-specified-explicitly)
+           * [Deploying options](#deploying-options)
         * [Task aemUpload](#task-aemupload)
         * [Task aemDelete](#task-aemdelete)
         * [Task aemInstall](#task-aeminstall)
@@ -83,14 +86,14 @@ To see documentation for previous 5.x serie, please [click here](https://github.
         * [Task aemActivate](#task-aemactivate)
      * [Bundle plugin](#bundle-plugin)
         * [Bundle conventions](#bundle-conventions)
-        * [Embedding JAR file into built OSGi bundle](#embedding-jar-file-into-built-osgi-bundle)
+        * [Embedding JAR file into OSGi bundle](#embedding-jar-file-into-osgi-bundle)
         * [Configuring OSGi bundle manifest attributes](#configuring-osgi-bundle-manifest-attributes)
         * [Excluding packages being incidentally imported by OSGi bundle](#excluding-packages-being-incidentally-imported-by-osgi-bundle)
      * [Instance plugin](#instance-plugin)
         * [Task aemSetup](#task-aemsetup)
         * [Task aemResetup](#task-aemresetup)
         * [Task aemCreate](#task-aemcreate)
-           * [Source files configuration](#source-files-configuration)
+           * [Configuration of AEM instance source (JAR file or backup file)](#configuration-of-aem-instance-source-jar-file-or-backup-file)
            * [Extracted files configuration (optional)](#extracted-files-configuration-optional)
         * [Task aemBackup](#task-aembackup)
         * [Task aemDestroy](#task-aemdestroy)
@@ -103,6 +106,11 @@ To see documentation for previous 5.x serie, please [click here](https://github.
         * [Task aemCollect](#task-aemcollect)
   * [How to's](#how-tos)
      * [Set AEM configuration properly for all / concrete project(s)](#set-aem-configuration-properly-for-all--concrete-projects)
+     * [Implement custom AEM tasks](#implement-custom-aem-tasks)
+        * [Downloading CRX package from external HTTP endpoint and deploying it on desired AEM instances](#downloading-crx-package-from-external-http-endpoint-and-deploying-it-on-desired-aem-instances)
+        * [Controlling OSGi bundles and components](#controlling-osgi-bundles-and-components)
+        * [Executing code on AEM runtime](#executing-code-on-aem-runtime)
+        * [Calling AEM endpoints / making any HTTP requests](#calling-aem-endpoints--making-any-http-requests)
      * [Understand why there are one or two plugins to be applied in build script](#understand-why-there-are-one-or-two-plugins-to-be-applied-in-build-script)
      * [Work effectively on start and daily basis](#work-effectively-on-start-and-daily-basis)
      * [Filter instances for which packages will be deployed or satisfied](#filter-instances-for-which-packages-will-be-deployed-or-satisfied)
@@ -121,7 +129,7 @@ To see documentation for previous 5.x serie, please [click here](https://github.
 * Most effective way to experience Gradle AEM Plugin is to use *Quickstart* located in:
   * [AEM Single-Project Example](https://github.com/Cognifide/gradle-aem-single#quickstart) - recommended for **application** development,
   * [AEM Multi-Project Example](https://github.com/Cognifide/gradle-aem-multi#quickstart) - recommended for **project** development,
-* The only needed software to start using plugin is to have installed on machine Java 8.
+* The only software needed on your machine to start using plugin is Java 8.
 * As a build command, it is recommended to use Gradle Wrapper (`gradlew`) instead of locally installed Gradle (`gradle`) to easily have same version of build tool installed on all environments. Only at first build time, wrapper will be automatically downloaded and installed, then reused.
 
 ## Configuration
@@ -129,9 +137,9 @@ To see documentation for previous 5.x serie, please [click here](https://github.
 ### Plugin setup
 
 Released versions of plugin are available on [Bintray](https://bintray.com/cognifide/maven-public/gradle-aem-plugin), 
-so that this repository need to be included in *buildscript* section.
+so that this repository needs to be included in *buildscript* section.
 
-#### Minimal:
+#### Minimal
 
 Configuration below assumes building and deploying CRX packages to AEM instance(s) via command: `gradlew aemDeploy`.
 
@@ -143,7 +151,7 @@ repositories {
 }
 
 dependencies {
-    implementation("com.cognifide.gradle:aem-plugin:6.0.0")
+    implementation("com.cognifide.gradle:aem-plugin:6.0.2")
 }
 ```
 
@@ -153,6 +161,8 @@ File *build.gradle.kts*:
 plugins {
     id("com.cognifide.aem.bundle") // or 'package' for JCR content only
 }
+
+group = "com.company.aem"
 ```
 
 #### Additional
@@ -166,25 +176,35 @@ plugins {
     id("org.jetbrains.kotlin.jvm") // or any other like 'java' to compile OSGi bundle
 }
 
+group = "com.company.aem"
+version = "1.0.0"
 defaultTasks = listOf(":aemSatisfy", ":aemDeploy")
 
 aem {
     config {
         packageRoot = "${aem.project.file("src/main/content")}"
         // ...
-               
+        
+        localInstance {
+            // ...
+        }
+        resolver {
+            // ...
+        }
     }
     tasks {
         compose {
-            fromProject(':core')
-            fromProject(':config')
+            fromProject(":core")
+            fromProject(":config")
         }
         bundle {
             javaPackage = "com.company.example.aem"
             // ...
         }
         satisfy {
-            url('http://.../package.zip')
+            packages {
+                url("http://.../package.zip")
+            }
         }
     }
 }
@@ -198,6 +218,8 @@ To see all available options and actual documentation, please follow to:
 * `bundle` - [BundleJar](src/main/kotlin/com/cognifide/gradle/aem/bundle/BundleJar.kt)
 * `satisfy` - [Satisfy](src/main/kotlin/com/cognifide/gradle/aem/instance/tasks/Satisfy.kt)
 * `...` - other tasks in similar way.
+* `config.localInstance` - [LocalInstanceOptions](src/main/kotlin/com/cognifide/gradle/aem/instance/LocalInstanceOptions.kt)
+* `config.resolver` - [ResolverOptions](src/main/kotlin/com/cognifide/gradle/aem/common/file/resolver/ResolverOptions.kt)
 
 ### Config plugin
 
@@ -236,6 +258,53 @@ Part | Possible values | Description |
 `$TYPE_NAME` | `author`, `publish`, `publish2`, etc | Combination of AEM instance type and semantic suffix useful when more than one of instance of same type is being configured. |
 `$PROP_NAME=$PROP_VALUE` | **Local instances:** `httpUrl=http://admin:admin@localhost:4502`<br>`type=local`(or remote)<br>`password=foo`<br>`runModes=nosamplecontent`<br>`jvmOpts=-server -Xmx2048m -XX:MaxPermSize=512M -Djava.awt.headless=true`, `startOpts=...`<br>`debugPort=24502`.<br><br>**Remote instances:** `httpUrl`, `type`, `user`, `password`. | Run modes, JVM opts and start opts should be comma delimited. |
 
+
+Default remote instances defined via properties (below lines are optional):
+
+```
+aem.instance.local-author.httpUrl=http://localhost:4502
+aem.instance.local-publish.httpUrl=http://localhost:4503
+```
+
+Example for defining multiple remote instances (that could be [filtered](#filter-instances-for-which-packages-will-be-deployed-or-satisfied)):
+
+```
+aem.instance.int-author.httpUrl=http://author.aem-integration.company.com
+aem.instance.int-publish.httpUrl=http://aem-integration.company.com
+aem.instance.stg-author.httpUrl=http://author.aem-staging.company.com
+aem.instance.stg-publish.httpUrl=http://aem-staging.company.com
+```
+
+Example for defining remote instance with credentials separated:
+
+```
+aem.instance.test-author.httpUrl=http://author.aem-integration.company.com
+aem.instance.test-author.user=foo
+aem.instance.test-author.password=bar
+```
+
+Example for defining remote instance with credentials details included in URL:
+
+```
+aem.instance.test-author.httpUrl=http://foo:bar@author.aem-integration.company.com
+```
+
+Example for defining local instances (created on local file system):
+
+```
+aem.instance.local-author.httpUrl=http://localhost:4502
+aem.instance.local-author.type=local
+aem.instance.local-author.runModes=nosamplecontent
+aem.instance.local-author.jvmOpts=-server -Xmx1024m -XX:MaxPermSize=256M -Djava.awt.headless=true
+
+aem.instance.local-publish.httpUrl=http://localhost:4503
+aem.instance.local-publish.type=local
+aem.instance.local-publish.runModes=nosamplecontent
+aem.instance.local-publish.jvmOpts=-server -Xmx1024m -XX:MaxPermSize=256M -Djava.awt.headless=true
+```
+
+Notice! Remember to define also AEM [source files](#configuration-of-aem-instance-source-jar-file-or-backup-file).
+
 #### Defining instances via build script
 
 Example usage below. The commented value is an effective instance name.
@@ -245,7 +314,6 @@ aem {
     config {
         localInstance("http://localhost:4502") // local-author
         localInstance("http://localhost:4502") { // local-author
-            user = "admin"
             password = "admin"
             typeName = "author"
             debugPort = 14502 
@@ -253,7 +321,6 @@ aem {
       
         localInstance("http://localhost:4503") // local-publish
         localInstance("http://localhost:4503") { // local-publish
-            user = "admin"
             password = "admin"
             typeName = "publish"
             debugPort = 14503
@@ -364,8 +431,8 @@ For such cases, see configuration below:
 ```kotlin
 aem {
     tasks {
-        clean {
-            options {
+        sync {
+            cleaner {
                 propertiesSkipped += listOf(
                         pathRule("dam:sha1", listOf(), listOf("**/content/dam/*.svg/*")),
                         pathRule("dam:size", listOf(), listOf("**/content/dam/*.svg/*")),
@@ -434,6 +501,7 @@ Copy JCR content from one instance to another. Sample usages below.
   ```bash
   gradlew :aemRcp -Paem.rcp.source.instance=stg-author -Paem.rcp.target.instance=int-author -Paem.rcp.paths=[/content/example,/content/example2]
   ```
+  Right side of assignment could skipped if equals to left (same path on both source & target instance).
 
 * Using predefined instances with source and target nodes specified in file:
 
@@ -460,7 +528,7 @@ Copy JCR content from one instance to another. Sample usages below.
 Keep in mind, that copying JCR content between instances, could be a trigger for running AEM workflows like *DAM Update Asset* which could cause heavy load on instance.
 Consider disabling AEM workflow launchers before running this task and re-enabling after.
 
-RCP task is internally using [Vault Remote Copy](http://jackrabbit.apache.org/filevault/rcp.html) which requires to having bundle *Apache Sling Simple WebDAV Access to repositories (org.apache.sling.jcr.webdav)* " in active state on instance.
+RCP task is internally using [Vault Remote Copy](http://jackrabbit.apache.org/filevault/rcp.html) which requires bundle *Apache Sling Simple WebDAV Access to repositories (org.apache.sling.jcr.webdav)* present in active state on instance.
 
 #### Task `aemVlt`
 
@@ -472,7 +540,7 @@ For instance, to reflect `aemRcp` functionality, command below could be executed
 gradlew :content:aemVlt -Paem.vlt.command='rcp -b 100 -r -u -n http://admin:admin@localhost:4502/crx/-/jcr:root/content/dam/example http://admin:admin@localhost:4503/crx/-/jcr:root/content/dam/example' 
 ```
 
-For more details about available parameters, please visit [VLT Tool documentation](https://docs.adobe.com/docs/en/aem/6-2/develop/dev-tools/ht-vlttool.html).
+For more details about available parameters, please visit [VLT Tool documentation](https://helpx.adobe.com/experience-manager/6-4/sites/developing/using/ht-vlttool.html).
 
 While using task `aemVlt` be aware that Gradle requires to have working directory with file *build.gradle.kts* in it, but Vault tool can work at any directory under *jcr_root*. To change working directory for Vault, use property `aem.vlt.path` which is relative path to be appended to *jcr_root* for project task being currently executed.
 
@@ -492,7 +560,7 @@ Then file at path *build/aem/aemDebug/debug.json* with content below is being ge
 {
   "buildInfo" : {
     "plugin" : {
-      "pluginVersion" : "6.0.0",
+      "pluginVersion" : "6.0.2",
       "gradleVersion" : "5.0"
     },
     "gradle" : {
@@ -524,9 +592,29 @@ Then file at path *build/aem/aemDebug/debug.json* with content below is being ge
         "httpPort" : 4502
       }
     },
-    "instanceRoot" : ".../.aem/example",
+    "localInstanceOptions" : {
+      "root" : ".../.aem/example",
+      "source" : "AUTO",
+      "zipUrl" : null,
+      "jarUrl" : null,
+      "licenseUrl" : null,
+      "overridesPath" : "*/src/main/resources/local-instance",
+      "expandFiles" : [
+        "**/start.bat",
+        "**/stop.bat",
+        "**/start",
+        "**/stop"
+      ],
+      "expandProperties" : { },
+      "allFiles" : [ ],
+      "extraFiles" : [ ],
+      "jar" : null,
+      "license" : null,
+      "zip" : null,
+      "mandatoryFiles" : [ ]
+    },
     "packageSnapshots" : [ ],
-    "packageRoot" : ".../gradle-aem-multi/aem/app.core/src/main/content",
+    "packageRoot" : ".../gradle-aem-multi/aem/sites/src/main/content",
     "packageMetaCommonRoot" : ".../gradle-aem-multi/aem/gradle/META-INF",
     "packageInstallPath" : "/apps/example/app.core/install",
     "packageInstallRepository" : true,
@@ -545,7 +633,7 @@ Then file at path *build/aem/aemDebug/debug.json* with content below is being ge
     "jar" : {
       "installPath" : "/apps/example/app.core/install",
       "attributesConvention" : true,
-      "javaPackage" : "com.company.example.aem.app.core",
+      "javaPackage" : "com.company.example.aem.sites",
       "javaPackageOptions" : "-split-package:=merge-first",
       "bndPath" : ".../gradle-aem-multi/aem/app.core/bnd.bnd",
       "bndInstructions" : {
@@ -556,10 +644,10 @@ Then file at path *build/aem/aemDebug/debug.json* with content below is being ge
         "Bundle-Category" : "example",
         "Bundle-Vendor" : "Company",
         "Bundle-Name" : "Example - AEM Application Core",
-        "Bundle-SymbolicName" : "com.company.example.aem.app.core",
-        "Sling-Model-Packages" : "com.company.example.aem.app.core",
+        "Bundle-SymbolicName" : "com.company.example.aem.sites",
+        "Sling-Model-Packages" : "com.company.example.aem.sites",
         "Import-Package" : "*",
-        "Export-Package" : "com.company.example.aem.app.core.*;-split-package:=merge-first"
+        "Export-Package" : "com.company.example.aem.sites.*;-split-package:=merge-first"
       }
     }
   },
@@ -627,13 +715,19 @@ aem {
 }
 ```
 
-For the reference, see [usage in AEM Multi-Project Example](https://github.com/Cognifide/gradle-aem-multi/blob/master/aem/app.common/build.gradle.kts).
+For the reference, see [usage in AEM Multi-Project Example](https://github.com/Cognifide/gradle-aem-multi/blob/master/aem/common/build.gradle.kts).
 
-##### Assembling packages (merging into all-in-one)
+##### Assembling packages (merging all-in-one)
 
-Let's assume following project structure (with build file contents):
+Let's assume following project structure:
 
-* *build.gradle.kts* (project `:`)
+* *aem/build.gradle.kts* (project `:aem`, no source files at all)
+* *aem/sites/build.gradle.kts*  (project `:aem:sites`, JCR content and OSGi bundle)
+* *aem/common/build.gradle.kts*  (project `:aem:common`, JCR content and OSGi bundle)
+* *aem/content.init/build.gradle.kts*  (project `:aem:content.init`, JCR content only)
+* *aem/content.demo/build.gradle.kts*  (project `:aem:content.demo`, JCR content only)
+
+File content of *aem/build.gradle.kts*:
 
 ```kotlin
 plugins {
@@ -643,43 +737,17 @@ plugins {
 aem {
     tasks {
         compose {
-            fromProjects(":app:*")
-            fromProjects(":content:*")
-            fromProject(":migration")
+            fromProject(":aem:sites")
+            fromProject(":aem:common")
+            fromProjects(":aem:content.*")
         }
     }    
 }
 ```
 
-When building via command `gradlew :build`, then the effect will be a CRX package with assembled JCR content and OSGi bundles from projects: `:app:core`, `:app:common`, `:content:init`, `:content:demo` and `:migration`.
+When building via command `gradlew :aem:build`, then the effect will be a CRX package with assembled JCR content and OSGi bundles from projects: `:aem:sites`, `:aem:common`, `:aem:content.init`, `:aem:content.demo`.
 
-* *app/build.gradle.kts*  (project `:app`)
-
-```kotlin
-plugins {
-    id("com.cognifide.aem.package")
-}
-
-aem {
-    tasks {
-        compose {
-            fromSubprojects()
-        }
-    }
-}
-```
-
-When building via command `gradlew :app:build`, then the effect will be a CRX package with assembled JCR content and OSGi bundles from projects: `:app:core`, `:app:common` only.
-
-* *app/core/build.gradle.kts* (project `:app:core`, JCR content and OSGi bundle)
-* *app/common/build.gradle.kts* (project `:app:common`, JCR content and OSGi bundle)
-* *content/init/build.gradle.kts* (project `:content:init`, JCR content only)
-* *content/demo/build.gradle.kts* (project `:content:demo`, JCR content only)
-* *migration/build.gradle.kts* (project `:migration`, JCR content only)
-* *test/integration/build.gradle.kts* (project `:test:integration`, any source code)
-* *test/functional/build.gradle.kts* (project `:test:functional`, any source code)
-
-Gradle AEM Plugin is configured in that way that project can have:
+Gradle AEM Plugin is configured in a way that project can have:
  
 * JCR content,
 * source code to compile OSGi bundle,
@@ -689,11 +757,11 @@ By distinguishing `fromProject`, `fromBundle` or `fromCompose` there is ability 
 
 When using `fromProject` there is an ability to pass lambda to customize options like `bundlePath`, `bundleRunMode`, decide to include only JCR contents, only bundles and more.
 
-Only one must have rule to be kept while developing a multi-module project is that **all Vault filter roots of all projects must be exclusive**. In general, they are most often exclusive, to avoid strange JCR installer behaviors, but sometimes exceptional [workspace filter](http://jackrabbit.apache.org/filevault/filter.html) rules are being applied like `mode="merge"` etc.
+However, one rule must be kept while developing a multi-module project: **all Vault filter roots of all projects must be exclusive**. In general, they are most often exclusive, to avoid strange JCR installer behaviors, but sometimes exceptional [workspace filter](http://jackrabbit.apache.org/filevault/filter.html) rules are being applied like `mode="merge"` etc.
 
 ##### Expandable properties
 
-In exactly same way as it is working for instance files, properties can be expanded inside metadata files of package being composed.
+In exactly the same way as it works for instance files, properties can be expanded inside metadata files of package being composed.
 
 Related configuration:
 
@@ -766,6 +834,17 @@ Instance urls must be delimited by semicolon:
 gradlew aemDeploy -Paem.instance.list=[http://admin:admin@localhost:4502,http://admin:admin@localhost:4503]
 ```
 
+##### Deploying options
+
+Add any of below command line parameters to customize CRX package deployment behavior:
+
+* `-Paem.deploy.awaited=false` - disable stability & health checks after deploying CRX package.
+* `-Paem.deploy.distributed=true` - use alternative form of deployment. At first, deploys CRX package to author instances, then triggers replication of CRX package so that it will be installed also on publish instances.
+* `-Paem.deploy.uploadForce=false` - disable force installation (by default even unchanged CRX package is forced to be reinstalled)
+* `-Paem.deploy.installRecursive=false` - disable automatic installation of subpackages located inside CRX package being deployed.  
+* `-Paem.deploy.uploadRetry=n` - customize number of retries being performed after failed CRX package upload.
+* `-Paem.deploy.installRetry=n` - customize number of retries being performed after failed CRX package install.
+
 #### Task `aemUpload`
 
 Upload composed CRX package into AEM instance(s).
@@ -796,7 +875,7 @@ Replicate installed CRX package to other AEM instance(s).
 
 ### Bundle plugin
 
-Should be applied to all projects that are composing CRX packages from both *OSGi bundle* being built and optionally *JCR content*, 
+Should be applied to all projects that are composing CRX packages from both *OSGi bundle* being built and optionally *JCR content*. 
 
 Inherits from [Package Plugin](#package-plugin).
 
@@ -823,21 +902,21 @@ allprojects {
 
 Then below section is absolutely redundant:
 
-*aem/app.core/build.gradle.kts*
+*aem/sites/build.gradle.kts*
 ```kotlin
 aem {
     tasks {
         bundle {
-            javaPackage = "${project.group}.${project.name}" // "com.company.example.aem.app.core"
+            javaPackage = "${project.group}.${project.name}" // "com.company.example.aem.sites"
         }
     }
 }
 ```
 
-Gradle AEM Plugin is following strategy [convention over configuration](https://pl.wikipedia.org/wiki/Convention_Over_Configuration), which means when following built-in convention about project structure & naming, then only minimal configuration is required. 
+Gradle AEM Plugin is following strategy [convention over configuration](https://en.wikipedia.org/wiki/Convention_over_configuration). When following built-in convention about project structure & naming, then only minimal configuration is required. 
 Still all features are fully configurable.
 
-#### Embedding JAR file into built OSGi bundle
+#### Embedding JAR file into OSGi bundle
 
 Use dedicated method in *bundle* section.
 
@@ -851,27 +930,14 @@ aem {
 }
 ```
  
-For the reference, see [usage in AEM Multi-Project Example](https://github.com/Cognifide/gradle-aem-multi/blob/master/aem/app.common/build.gradle.kts).
+For the reference, see [usage in AEM Multi-Project Example](https://github.com/Cognifide/gradle-aem-multi/blob/master/aem/common/build.gradle.kts).
 
 #### Configuring OSGi bundle manifest attributes
 
-Plugin by default covers generation of few attributes by convention. The minimal need is to only specify *javaPackage*  in *bundle* section:
-
-
-```kotlin
-aem {
-    tasks {
-        bundle {
-            javaPackage = "com.company.aem.example.common"
-        }
-    }
-}
-```
-
-Then the following attributes will be generated by convention:
+Plugin by default covers generation of few attributes by convention:
 
 * `Bundle-Name` will grab value from `project.description`
-* `Bundle-SymbolicName` will grab value from `javaPackage`
+* `Bundle-SymbolicName` will grab value from `javaPackage` (from section `aem.tasks.bundle`)
 * `Bundle-Activator` will grab value from `javaPackage.activator` assuming that activator is an existing file named *Activator* or *BundleActivator* under *main* source set.
 * `Sling-Model-Packages` will grab value from `javaPackage`
 * `Export-Package` will grab value from `javaPackage`.
@@ -927,7 +993,7 @@ Inherits from [Config Plugin](#config-plugin).
 
 #### Task `aemSetup`
 
-Perform initial setup of local AEM instance(s). Automated version of `aemCreate aemUp aemSatisfy aemDeploy`.
+Performs initial setup of local AEM instance(s). Automated version of `aemCreate aemUp aemSatisfy aemDeploy`.
 
 ![Setup task](docs/setup-task.png)
 
@@ -941,7 +1007,7 @@ To prevent data loss, this unsafe task execution must be confirmed by parameter 
  
 Create AEM instance(s) at local file system. Extracts *crx-quickstart* from downloaded JAR and applies configuration according to [instance definitions](#defining-instances-via-properties-file). 
 
-##### Source files configuration
+##### Configuration of AEM instance source (JAR file or backup file)
 
 To use this task, specify required properties in ignored file *gradle.properties* at project root (protocols supported: SMB, SSH, HTTP(s) or local path, HTTP with basic auth as example):
 
@@ -991,22 +1057,18 @@ This behavior is controlled by:
 ```kotlin
 aem {
     config {
-        instanceRoot = "${System.getProperty("user.home")}/.aem/${project.rootProject.name}"
-    }
-    tasks {
-        create {
-            options {
-                overridesPath = "${project.rootProject.file("src/main/resources/local-instance")}"
-                expandProperties = mapOf()
-                expandFiles = listOf(
-                    "**/*.properties", 
-                    "**/*.sh", 
-                    "**/*.bat", 
-                    "**/*.xml",
-                    "**/start",
-                    "**/stop"
-                )
-            }
+        localInstance {
+            root = aem.props.string("aem.localInstance.root") ?: "${aem.project.rootProject.file(".aem")}"
+            overridesPath = "${project.rootProject.file("src/main/resources/local-instance")}"
+            expandProperties = mapOf()
+            expandFiles = listOf(
+                "**/*.properties", 
+                "**/*.sh", 
+                "**/*.bat", 
+                "**/*.xml",
+                "**/start",
+                "**/stop"
+            )
         }
     }
 }
@@ -1014,7 +1076,7 @@ aem {
 
 Properties:
 
-* *aem.config.instanceRoot* determines where AEM instance files will be extracted on local file system.
+* *root* determines where AEM instance files will be extracted on local file system.
 * *overridesPath* determines project location that holds extra instance files that will override plugin defaults (start / stop scripts) and / or extracted AEM files.
 * *expandFiles* specifies which AEM instance files have an ability to use [expandable properties](#expandable-properties) inside.
 * *expandProperties* is a place for defining custom properties that can be expanded in AEM instance files.
@@ -1029,7 +1091,20 @@ Predefined expandable properties:
 Turns off local AEM instance(s) then archives them into ZIP file, then turns on again.
 
 The most recent file created by this task will be reused automatically while running task `aemResetup`.
-Also the file created could be also a [source file](#source-files-configuration) for task `aemCreate`.
+Also the file created could be also a [source file](#configuration-of-aem-instance-source-jar-file-or-backup-file) for task `aemCreate`.
+
+Backup files are stored at path relative to project that is applying plugin `com.cognifide.aem.instance`.
+Most often it will be path: *build/distributions/xxx.backup.zip*. It could be overridden by writing:
+
+```kotlin
+aem {
+    tasks {
+        backup {
+            destinationDir = file("any/other/path")
+        }
+    }
+}
+```
 
 #### Task `aemDestroy` 
 
@@ -1047,7 +1122,7 @@ Turn off local AEM instance(s).
 
 #### Task `aemRestart`
 
-Turn off then on local AEM instance(s).
+Turn off and then turn on local AEM instance(s).
 
 #### Task `aemReload`
 
@@ -1112,11 +1187,11 @@ aem {
                     url("https://github.com/OlsonDigital/aem-groovy-console/releases/download/11.0.0/aem-groovy-console-11.0.0.zip")
                     config {
                         instanceName = "*-author" // additional filter intersecting 'deployInstanceName'
-                        initializer { sync ->
-                            logger.info("Installing Groovy Console on ${sync.instance}")
+                        initializer {
+                            logger.info("Installing Groovy Console on $instance")
                         }
-                        finalizer { sync ->
-                            logger.info("Installed Groovy Console on ${sync.instance}")
+                        finalizer {
+                            logger.info("Installed Groovy Console on $instance")
                         }
                         completer {
                             logger.info("Reloading instance(s) after installing Groovy Console")
@@ -1151,7 +1226,7 @@ Wait until all local or remote AEM instance(s) be stable.
 Action parameter | CMD Property | Default Value | Purpose
 --- | --- | --- | ---
 `stableRetry` | *aem.await.stableRetry* | `300` | Hook for customizing how often and how many stability checks will be performed. Corresponding CMD param controls maximum count of retries if default hook is active.
-`stableAssurance` | *aem.await.stableAssurance* | `3` | Number of intervals / additional instance stability checks to assure all stable instances.
+`stableAssurance` | *aem.await.stableAssurance* | `3` | Number of intervals / additional instance stability checks after stable state has been reached for the first time to assure all stable instances.
 `stableCheck` | n/a | `{ it.checkBundleStable() }` | Hook for customizing instance stability check. Check will be repeated if assurance is configured. 
 `healthCheck` | n/a | { `it.checkComponentState() }` | Hook for customizing instance health check.
 `healthRetry` | *aem.await.healthRetry* | `5` | Hook for customizing how often and how many health checks will be performed.
@@ -1161,6 +1236,35 @@ Action parameter | CMD Property | Default Value | Purpose
 `resume` | *aem.await.resume* | `false` | Do not fail build but log warning when there is still some unstable or unhealthy instance.
 
 Instance state, stable check, health check lambdas are using: [InstanceState](src/main/kotlin/com/cognifide/gradle/aem/instance/InstanceState.kt). Use its methods to achieve expected customized behavior.
+
+```kotlin
+aem {
+    tasks {
+        await {
+            options {
+                availableCheck = check(InstanceState.BUNDLE_STATE_SYNC_OPTIONS, { !bundleState.unknown })
+                stableState = checkBundleState()
+                stableCheck = checkBundleStable()
+                healthCheck = checkComponentState(InstanceState.PLATFORM_COMPONENTS, aem.javaPackages.map { "$it.*" })
+            }
+        }
+    }
+}
+```
+
+Such options could be also customized for `aemDeploy` task when using block:
+
+```
+aem {
+    tasks {
+        deploy {
+            await {
+                // ...
+            }
+        }
+    }
+}
+```
 
 #### Task `aemCollect`
 
@@ -1225,9 +1329,127 @@ aem {
 Warning! Very often plugin users mistake is to configure `aemSatisfy` task in `allprojects` closure. 
 As an effect there will be same dependent CRX package defined multiple times.
 
+### Implement custom AEM tasks
+
+Most of built-in tasks logic is based on`aem` object of type [AemExtension](src/main/kotlin/com/cognifide/gradle/aem/common/AemExtension.kt). 
+It provides concise AEM related API for accessing AEM configuration, synchronizing with AEM instances via specialized methods of `aem.sync` to make tasks implementation a breeze.
+What is more, it also provides built-in HTTP client `aem.http` to be able to communicate with any external services like for downloading CRX packages from package shares like Nexus repositories, JFrog Artifactory etc.
+The options are almost unlimited. 
+
+#### Downloading CRX package from external HTTP endpoint and deploying it on desired AEM instances
+
+```kotlin
+
+aem {
+    tasks {
+        register("aemDeployProductionContent") {
+            doLast {
+                val instances = listOf(
+                        aem.instance("http://user:password@aem-host.com"), // URL specified directly, could be parametrized by some gradle command line property
+                        // aem.namedInstance("local-publish") // reused AEM instance defined in 'gradle.properties'
+                )
+                val pkg = aem.http { downloadTo("https://company.com/aem/backups/example-1.0.0-201901300932.backup.zip", project.file("build/tmp")) }
+                aem.sync(instances) { deployPackage(pkg) }
+            }
+        }
+    }
+}
+```
+
+#### Controlling OSGi bundles and components
+
+To disable specific OSGi component by its PID value and only on publish instances, simply write:
+
+
+```kotlin
+aem {
+    tasks {
+        register("aemConfigure") {
+            doLast {
+                aem.sync(aem.publishInstances) {
+                    disableComponent("org.apache.sling.jcr.davex.impl.servlets.SlingDavExServlet")
+                    // stopBundle("org.apache.sling.jcr.webdav")
+                }
+            }
+        }
+    }
+}
+```
+
+#### Executing code on AEM runtime
+
+It is possible to easily execute any code on AEM runtime using [Groovy Console](https://github.com/icfnext/aem-groovy-console). Assuming that on AEM instances there is already installed Groovy Console e.g via `aemSatisfy` task, then it is possible to use methods `evalGroovyCode` and `evalGroovyScript` of `aem.sync`.
+
+```kotlin
+aem {
+    tasks {
+        satisfy {
+            group("tool.groovyconsole") { url("https://github.com/icfnext/aem-groovy-console/releases/download/12.0.0/aem-groovy-console-12.0.0.zip") }
+        }
+        register("aemConfigure") {
+            doLast {
+                aem.sync {
+                    evalGroovyCode("""
+                        def postsService = getService("com.company.example.aem.sites.services.posts.PostsService")
+                        
+                        println postsService.randomPosts(5)
+                    """)
+                    // evalGroovyScript("posts.groovy") // if script above moved to 'aem/gradle/groovyScript/posts.groovy'
+                }
+            }
+        }
+    }
+}
+```
+
+#### Calling AEM endpoints / making any HTTP requests
+
+To make an HTTP request to some AEM endpoint (servlet) simply write:
+
+```kotlin
+aem {
+    tasks {
+        register("aemHealthCheck") {
+            doLast {
+                aem.sync {
+                    get("/bin/example/healthCheck") { checkStatus(it, 200) }
+                }
+            }
+        }
+    }
+}
+```
+
+There are unspecified AEM instances as `aem.sync` method parameter so that instances matching [default filtering](#filter-instances-for-which-packages-will-be-deployed-or-satisfied) will be used.
+
+The fragment `{ checkStatus(it, 200) }` could be even ommitted because, by default sync API checks status code that it belongs to range [200,300\).
+
+To parse endpoint response as [JSON](http://static.javadoc.io/com.jayway.jsonpath/json-path/2.4.0/com/jayway/jsonpath/DocumentContext.html) (using [JsonPath](https://github.com/json-path/JsonPath)), simply write:
+
+```kotlin
+aem {
+    tasks {
+        register("aemHealthCheck") {
+            doLast {
+                aem.sync {
+                    val json = get("/bin/example/healthCheck") { asJson(it) }
+                    val status = json.read("status") as String
+                    
+                    if (status != "OK") {
+                        throw GradleException("Health check failed on: $instance because status '$status' detected.")
+                    }
+                }
+            }
+        }
+    }
+}
+```
+
+There are also available convenient methods `asStream`, `asString` to be able to process endpoint responses.
+
 ### Understand why there are one or two plugins to be applied in build script
 
-Gradle AEM Plugin assumes separation of 4 plugins to properly fit into Gradle tasks structure correctly.
+Gradle AEM Plugin assumes separation of 5 plugins to properly fit into Gradle tasks structure correctly.
 
 Most often, Gradle commands are being launched from project root and tasks are being run by their name e.g `aemSatisfy` (which is not fully qualified, better if it will be `:aemSatisfy` of root project).
 Let's imagine if task `aemSatisfy` will come from package plugin, then Gradle will execute more than one `aemSatisfy` (for all projects that have plugin applied), so that this is unintended behavior.
@@ -1237,17 +1459,17 @@ Currently used plugin architecture solves that problem.
 
 Initially, to create fully configured local AEM instances simply run command `gradlew aemSetup`.
 
-Later during development process, building and deploying to AEM should be done using most simple command: `gradlew`.
-Above configuration uses [default tasks](https://docs.gradle.org/current/userguide/tutorial_using_tasks.html#sec:default_tasks), so that alternatively it is possible to build same using explicitly specified command `gradlew aemSatisfy aemDeploy aemAwait`.
+Later during development process, building and deploying to AEM should be done using the simplest command: `gradlew`.
+Above configuration uses [default tasks](https://docs.gradle.org/current/userguide/tutorial_using_tasks.html#sec:default_tasks), so that alternatively it is possible to do the same using explicitly specified command `gradlew aemSatisfy aemDeploy aemAwait`.
 
 * Firstly dependent packages (like AEM hotfixes, Vanity URL Components etc) will be installed lazily (only when they are not installed yet).
 * In next step application is being built and deployed to all configured AEM instances.
-* Finally build awaits till all AEM instances be stable.
+* Finally build awaits till all AEM instances are stable.
 
 ### Filter instances for which packages will be deployed or satisfied
 
 When there are defined named AEM instances: `local-author`, `local-publish`, `integration-author` and `integration-publish`,
-then it is available to deploy (or satisfy) packages with taking into account: 
+then it is possible to deploy (or satisfy) packages taking into account: 
 
  * type of environment (local, integration, staging, etc)
  * type of AEM instance (author / publish)
